// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox select with no props snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r2:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    style="width: 200px;"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Filter by status
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`opened checkbox select snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r5:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    style="width: 200px;"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Filter by status
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0  "
          width="1em"
        >
          <path />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;
